--- a/index.html
+++ b/index.html
@@ -97,6 +97,20 @@
               >
             </p>
           </article>
+          <article class="card">
+            <h3>Учебный проект · Дерево решений для прогноза отмены брони</h3>
+            <p class="meta">2025 · Python</p>
+            <p>
+              Проект решает задачу бинарной классификации: 
+              по параметрам бронирования нужно определить, 
+              будет ли отмена (is_canceled = 1) или нет (is_canceled = 0)
+            </p>
+            <p class="meta">
+              <a href="https://github.com/DillFennel/Hotels_decisionTree"
+                >github.com/DillFennel/Hotels_decisionTree</a
+              >
+            </p>
+          </article>
         </div>
 
         <div>
@@ -115,7 +129,7 @@
           <h2>Образование</h2>
           <article class="card">
             <h3>РЭУ им. Г. В. Плеханова</h3>
-            <p class="meta">Информатика и вычислительная техника · 2023 — 2027</p>
+            <p class="meta">Бакалавриат · Информатика и вычислительная техника · 2023 — 2027</p>
           </article>
 
           <h2>Сертификаты</h2>
