Added info about myself

--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
       <section>
         <h2>Обо мне</h2>
         <p>
-          Тут вставить текст о себе
+          Студент-разработчик, сфокусирована на бэкенд-разработке на C++. 
+          Имею практический опыт работы в ИСП РАН. 
+          Прошла Летнюю школу Яндекса, а именно Школу бэкенд-разработки на C++,
+           где разрабатывали асинхронные сервисы на фреймворке Userver. 
+           Владею сопутствующим технологиями: 
+           Python, SQL/NoSQL базы данных, Git, Linux и Docker.
         </p>
       </section>
 
@@ -57,13 +62,13 @@
           </header>
           <ul>
             <li>
-              Описать опыт работы в лаборатории
+              Формализация и алгоритмизация поставленных задач
             </li>
             <li>
-              Что-то ещё
+              Написание программного кода, в основном на C++
             </li>
             <li>
-              Что-то ещё
+              Проверка и отладка программного кода
             </li>
           </ul>
         </article>
@@ -155,23 +160,7 @@
           </div>
         </div>
       </section>
-
-      <section>
-        <h2>Что важно</h2>
-        <ul class="principles">
-          <li>
-            <strong>Что-то важное.</strong> Что-то ещё
-          </li>
-          <li>
-            <strong>Что-то важное.</strong> Что-то ещё
-          </li>
-          <li>
-            <strong>Что-то важное.</strong> Что-то ещё
-          </li>
-        </ul>
-      </section>
     </main>
-
     <footer class="footer">
       <p>Последнее обновление: ноябрь 2025</p>
     </footer>
