--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <span>·</span>
             <a href="https://github.com/dillfennel">github.com/dillfennel</a>
             <span>·</span>
-            <a href="https://t.me/dillfennel">@dillfennel</a>
+            <a href="https://t.me/dillfennel">t.me/dillfennel</a>
             <span>·</span>
             <span>Москва, Россия</span>
           </div>
